[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "supportgym"
version = "1.0.0"
description = "An OpenEnv-compatible customer support RL environment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["openenv", "reinforcement-learning", "customer-support", "nlp"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/NiteshAnand/supportgym"

[tool.openenv]
name = "supportgym"
version = "1.0.0"
entrypoint = "server.app:main"
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"